Partie Admin CV

--- a/src/CVBundle/Resources/views/CV/index.html.twig
+++ b/src/CVBundle/Resources/views/CV/index.html.twig
@@ -1,10 +1,13 @@
 {% extends "CVBundle::layout.html.twig" %}
 
 
-{% block cv_body %}
+{% block cv_main %}
 
-    <h2>Index CV</h2>
+    <div id="index" class="main">
 
+        <!-- Vide -->
+
+    </div>
 
 
 {% endblock %}
