--- a/src/CVBundle/Resources/views/layout.html.twig
+++ b/src/CVBundle/Resources/views/layout.html.twig
@@ -3,9 +3,27 @@
 
 {% block body %}
 
-    <h1>CV</h1>
+    <header>
+        <h1>GUILLAUME HANOTEL</h1>
+        <span class="subtitle">Intro Titre</span>
+    </header>
 
-    {% block cv_body %}
+    <nav>
+        <ul>
+            <li>INTRO</li>
+            <li>PROJETS</li>
+            <li>EXPERIENCES</li>
+            <li>COMPETENCES</li>
+            <li>FORMATION</li>
+            <li>BLOG</li>
+            <li>CONTACT</li>
+        </ul>
+    </nav>
+
+    {% block cv_main %}
+
+
+
 
 
     {% endblock %}
