--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -7,6 +7,9 @@
     <title>{% block title %}Guillaume HANOTEL{% endblock %}</title>
 
     {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('assets/css/bootstrap-grid.min.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('assets/css/bootstrap-reboot.min.css') }}"/>
         <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}"/>
     {% endblock %}
 </head>
@@ -20,6 +23,9 @@
 
 {% block javascripts %}
     <script src="{{ asset('assets/js/jquery-3.2.1.min.js') }}"></script>
+    <script src="{{ asset('assets/js/popper.js') }}"></script>
+    <script src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ asset('assets/js/main.js') }}"></script>
 {% endblock %}
 
