--- a/src/CVBundle/Resources/views/layout.html.twig
+++ b/src/CVBundle/Resources/views/layout.html.twig
@@ -3,29 +3,17 @@
 
 {% block body %}
 
-    <header>
-        <h1>GUILLAUME HANOTEL</h1>
-        <span class="subtitle">Intro Titre</span>
-    </header>
+    <div class="cv">
 
-    <nav>
-        <ul>
-            <li>INTRO</li>
-            <li>PROJETS</li>
-            <li>EXPERIENCES</li>
-            <li>COMPETENCES</li>
-            <li>FORMATION</li>
-            <li>BLOG</li>
-            <li>CONTACT</li>
-        </ul>
-    </nav>
 
-    {% block cv_main %}
+        {% block cv_main %}
 
 
 
 
 
-    {% endblock %}
+        {% endblock %}
+
+    </div>
 
 {% endblock %}
