--- a/src/BlogBundle/Resources/views/layout.html.twig
+++ b/src/BlogBundle/Resources/views/layout.html.twig
@@ -6,10 +6,16 @@
 
 {% block body %}
 
-    <h1>Blog</h1>
+    <div class="blog">
 
-    {% block blog_body %}
+        <h1>Blog</h1>
 
-    {% endblock %}
+
+
+        {% block blog_main %}
+
+        {% endblock %}
+
+    </div>
 
 {% endblock %}
