--- a/src/CVBundle/Resources/views/layout.html.twig
+++ b/src/CVBundle/Resources/views/layout.html.twig
@@ -5,8 +5,10 @@
 
     <div class="cv">
 
+        <img class="bg-img-ynov" src="{{ asset('assets/images/Hall-Ynov.jpg') }}" alt="background Hall Ynov">
 
         {% block cv_main %}
+
 
 
 
@@ -15,5 +17,8 @@
         {% endblock %}
 
     </div>
+
+
+    <footer>© 2017 | Tous droits réservés - Guillaume HANOTEL</footer>
 
 {% endblock %}
