--- a/src/BlogBundle/Resources/views/layout.html.twig
+++ b/src/BlogBundle/Resources/views/layout.html.twig
@@ -8,11 +8,13 @@
 
     <div class="blog">
 
-        <h1>Blog</h1>
-
-
+        <h1><a href="{{ path('blog_home') }}">Blog</a></h1>
 
         {% block blog_main %}
+
+
+
+
 
         {% endblock %}
 
