finalisation menu CV

--- a/src/CVBundle/Resources/views/CV/formations.html.twig
+++ b/src/CVBundle/Resources/views/CV/formations.html.twig
@@ -3,6 +3,8 @@
 
 {% block cv_main %}
 
+    {{ include("CVBundle:CV:menu.html.twig") }}
+
     <div id="formations" class="main">
 
         {% for formation in formations %}
