--- a/src/CVBundle/Resources/views/layout.html.twig
+++ b/src/CVBundle/Resources/views/layout.html.twig
@@ -19,6 +19,6 @@
     </div>
 
 
-    <footer>© 2017 | Tous droits réservés - Guillaume HANOTEL</footer>
+    <footer class="l-footer-cv footer-cv">© 2017 | Tous droits réservés - Guillaume HANOTEL</footer>
 
 {% endblock %}
