--- a/src/CVBundle/Resources/views/CV/projets.html.twig
+++ b/src/CVBundle/Resources/views/CV/projets.html.twig
@@ -3,6 +3,8 @@
 
 {% block cv_main %}
 
+    {{ include("CVBundle:CV:menu.html.twig") }}
+
     <div id="projets" class="main">
 
         {% for realisation in realisations %}
