style page réalisations

--- a/src/CVBundle/Resources/views/CV/intro.html.twig
+++ b/src/CVBundle/Resources/views/CV/intro.html.twig
@@ -6,11 +6,11 @@
 
     {{ include("CVBundle:CV:menu.html.twig") }}
 
-    <div id="intro" class="main l-intro container-fluid">
+    <div id="intro" class="main l-page-cv l-intro container-fluid">
 
-        <h2 class="col-md-6 offset-md-3 l-intro-title intro-title">A Propos</h2>
+        <h2 class="col-md-6 offset-md-3 l-page-cv-title page-cv-title l-intro-title intro-title">A Propos</h2>
 
-        <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 l-intro-content intro-content">
+        <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 l-page-cv-content page-cv-content l-intro-content intro-content">
             {{ content }}
         </div>
     </div>
