--- a/src/CVBundle/Resources/views/CV/menu.html.twig
+++ b/src/CVBundle/Resources/views/CV/menu.html.twig
@@ -20,7 +20,7 @@
                 <a href="{{ path('cv_intro') }}" class="nav-link">Intro</a>
             </li>
             <li {{ route == 'cv_projets' ? 'class="active"' }} class="nav-item">
-                <a href="{{ path('cv_projets') }}" class="nav-link">Projets</a>
+                <a href="{{ path('cv_projets') }}" class="nav-link">Réalisations</a>
             </li>
             <li {{ route == 'cv_experiences' ? 'class="active"' }} class="nav-item">
                 <a href="{{ path('cv_experiences') }}" class="nav-link">Expériences</a>
@@ -29,7 +29,7 @@
                 <a href="{{ path('cv_competences') }}" class="nav-link">Compétences</a>
             </li>
             <li {{ route == 'cv_formations' ? 'class="active"' }} class="nav-item">
-                <a href="{{ path('cv_formations') }}" class="nav-link">Formation</a>
+                <a href="{{ path('cv_formations') }}" class="nav-link">Formations</a>
             </li>
             <li class="nav-item">
                 <a href="{{ path('blog_home') }}" class="nav-link">Blog</a>
