--- a/src/CVBundle/Resources/views/CV/index.html.twig
+++ b/src/CVBundle/Resources/views/CV/index.html.twig
@@ -14,10 +14,10 @@
             <nav class="nav-header">
                 <ul>
                     <li><a class="nav-link" href="{{ path('cv_intro') }}">INTRO</a></li>
-                    <li><a class="nav-link" href="{{ path('cv_projets') }}">PROJETS</a></li>
+                    <li><a class="nav-link" href="{{ path('cv_projets') }}">REALISATIONS</a></li>
                     <li><a class="nav-link" href="{{ path('cv_experiences') }}">EXPERIENCES</a></li>
                     <li><a class="nav-link" href="{{ path('cv_competences') }}">COMPETENCES</a></li>
-                    <li><a class="nav-link" href="{{ path('cv_formations') }}">FORMATION</a></li>
+                    <li><a class="nav-link" href="{{ path('cv_formations') }}">FORMATIONS</a></li>
                     <li><a class="nav-link" href="{{ path('blog_home') }}">BLOG</a></li>
                     <li><a class="nav-link" href="{{ path('cv_contact') }}">CONTACT</a></li>
                 </ul>
