--- a/src/CVBundle/Resources/views/CV/competences.html.twig
+++ b/src/CVBundle/Resources/views/CV/competences.html.twig
@@ -5,14 +5,20 @@
 
     {{ include("CVBundle:CV:menu.html.twig") }}
 
-    <div id="competences" class="main">
+    <div id="competences" class="main l-page-cv l-compectences competences container">
 
-        {% for competence in competences %}
-            <div class="competence">
-                <p>{{ competence.intitule }}</p>
-                <img src="{{ competence.image }}" alt="img">
-            </div>
-        {% endfor %}
+        <h2 class="col-md-6 offset-md-3 l-page-cv-title page-cv-title l-competences-title competences-title">Compétences</h2>
+
+        <div class="row l-competences-content competences-content l-page-cv-content page-cv-content">
+
+            {% for competence in competences %}
+                <div class="competence col-sm-6 col-md-4 col-lg-3">
+                    <img src="{{ asset(competence.image) }}" alt="img" width="150">
+                    <p>{{ competence.intitule }}</p>
+                </div>
+            {% endfor %}
+
+        </div>
 
     </div>
 
