--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -160,6 +160,15 @@ img.bg-img-ynov {
     padding-top: 40px;
 }
 
+/** COMPETENCES CV **/
+
+.l-competences-title {
+}
+
+.l-competences-content {
+    padding-top: 40px;
+}
+
 /** FOOTER CV **/
 
 .l-footer-cv {
@@ -352,8 +361,32 @@ img.bg-img-ynov {
 }
 
 .exp-date {
+}
+
+/** COMPETENCES CV **/
+
+.competences-title{}
+
+.competences-content{}
+
+.competence {
+    text-align: center;
+    color: lightgrey;
 
 }
+
+.competence img {
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.competence img:hover {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
 
 /** FOOTER CV **/
 
