style page formation + page login

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,5 +1,9 @@
 {% extends "@FOSUser/layout.html.twig" %}
 
 {% block fos_user_content %}
+
+    {{ include("CVBundle:CV:menu.html.twig") }}
+
     {{ include('@FOSUser/Security/login_content.html.twig') }}
+
 {% endblock fos_user_content %}
