--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -4,37 +4,50 @@
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
-<div class="container-fluid">
-    <div class="row">
+<div class="container login l-login">
 
-        <form action="{{ path("fos_user_security_check") }}" method="post" class="col-md-6 offset-3">
+    <div class="login-header col-md-6 offset-md-3">
+        <img src="{{ asset('assets/images/lock.png') }}" alt="lock logo" width="300" height="300">
+        <h2>Accès Espace Admin</h2>
+    </div>
+
+
+    <div class="row login-content">
+
+        <form action="{{ path("fos_user_security_check") }}" method="post" class="col-md-6 offset-md-3">
             {% if csrf_token %}
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
             {% endif %}
 
             <div class="container-fluid">
+
                 <div class="form-group row">
-                    <label for="username">{{ 'security.login.username'|trans }}</label>
-                    <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required"/>
+                    <div class="col-md-8 offset-md-2 col-sm-6 offset-sm-3">
+                        <label class="label-hide" for="username">{{ 'security.login.username'|trans }}</label>
+                        <input placeholder="{{ 'security.login.username'|trans }}" class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required"/>
+                    </div>
                 </div>
 
                 <div class="form-group row">
-                    <label for="password">{{ 'security.login.password'|trans }}</label>
-                    <input class="form-control" type="password" id="password" name="_password" required="required"/>
+                    <div class="col-md-8 offset-md-2 col-sm-6 offset-sm-3">
+                        <label class="label-hide" for="password">{{ 'security.login.password'|trans }}</label>
+                        <input placeholder="{{ 'security.login.password'|trans }}" class="form-control" type="password" id="password" name="_password" required="required"/>
+                    </div>
                 </div>
 
-                <div class="form-group row">
-                    <div class="col-sm-6 offset-sm-3">
+                <div class="form-group row login-remember">
+                    <div class="col-md-8 offset-md-2 col-sm-6 offset-sm-3">
                         <input class="form-check-input" type="checkbox" id="remember_me" name="_remember_me" value="on"/>
                         <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-sm-6 offset-sm-3">
+                <div class="row login-btn">
+                    <div class="col-md-8 offset-md-2 col-sm-6 offset-sm-3">
                         <input class="btn btn-primary ce" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}"/>
                     </div>
                 </div>
+
             </div>
         </form>
     </div>
