--- a/src/CVBundle/Resources/views/CV/formations.html.twig
+++ b/src/CVBundle/Resources/views/CV/formations.html.twig
@@ -5,23 +5,37 @@
 
     {{ include("CVBundle:CV:menu.html.twig") }}
 
-    <div id="formations" class="main">
+    <div id="formations" class="main l-page-cv l-formations formations container">
 
-        {% for formation in formations %}
-            <div class="formation">
-                <p>{{ formation.anneeDebut|date('y') }}</p>
-                <p>{{ formation.anneeFin|date('y') }}</p>
-                <p>{{ formation.anneeCourante }}</p>
-                <p>{{ formation.intitule }}</p>
-                <p>{{ formation.ecole }}</p>
-                <p>{{ formation.ville }}</p>
-                <p>{{ formation.codepostal }}</p>
-                <p>{{ formation.description }}</p>
-                <p>{{ formation.lien }}</p>
-            </div>
-        {% endfor %}
+        <h2 class="col-md-6 offset-md-3 l-page-cv-title page-cv-title l-formations-title formations-title">Formations</h2>
+
+        <div class="row l-formations-content formations-content">
+
+            {% for formation in formations %}
+                <div class="formation">
+
+                    <div class="formation-date col-md-2 offset-md-1">
+                        <p>
+                            <span>{{ formation.anneeDebut|date('Y') }}</span>
+                            <span class="hr-date"></span>
+                            <span>{{ formation.anneeFin|date('Y') }}</span>
+                        </p>
+                    </div>
+
+                    <div class="formation-content col-md-9">
+                        <a class="formation-intitule" href="{{ formation.lien }}" target="_blank">{{ formation.intitule }} {{ formation.anneeCourante }} année</a>
+                        <p class="formation-lieu">{{ formation.ecole }} -
+                            <span class="formation-ville">{{ formation.ville }} ({{ formation.codepostal }})</span>
+                        </p>
+                        <p class="formation-description">{{ formation.description|nl2br }}</p>
+                    </div>
 
 
+                </div>
+            {% endfor %}
+
+
+        </div>
 
 
     </div>
