--- a/src/CVBundle/Resources/views/CV/contact.html.twig
+++ b/src/CVBundle/Resources/views/CV/contact.html.twig
@@ -1,14 +1,67 @@
 {% extends "CVBundle::layout.html.twig" %}
-
+{% form_theme form 'bootstrap_3_layout.html.twig' %}
 
 {% block cv_main %}
 
     {{ include("CVBundle:CV:menu.html.twig") }}
 
-    <div id="contact" class="main">
+    <div class="flash-contact">
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+    </div>
 
+    <div id="contact" class="main l-page-cv l-contact contact container">
 
+        <h2 class="col-md-6 offset-md-3 l-page-cv-title page-cv-title l-contact-title contact-title">Contact</h2>
 
+        <div class="col-lg-8 offset-lg-2 l-contact-content contact-content l-page-cv-content page-cv-content">
+
+            <div class="col-md-8 offset-md-2">
+                {{ form_start(form) }}
+
+                <div class="form-group">
+                    {{ form_widget(form.nom) }}
+                    <div class="form-errors">
+                        {{ form_errors(form.nom) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.email) }}
+                    <div class="form-errors">
+                        {{ form_errors(form.email) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.sujet) }}
+                    <div class="form-errors">
+                        {{ form_errors(form.sujet) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.message) }}
+                    <div class="form-errors">
+                        {{ form_errors(form.message) }}
+                    </div>
+                </div>
+
+                {# Render CSRF token etc .#}
+                <div style="display:none">
+                    {{ form_rest(form) }}
+                </div>
+
+                <div class="form-group submit-form col-sm-6 offset-sm-3">
+                    <input type="submit" value="Envoyer">
+                </div>
+
+                {{ form_end(form) }}
+            </div>
+
+        </div>
 
 
     </div>
